// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LevelRange> renders correctly with minimum and maximum specified 1`] = `
Array [
  "Level: ",
  "10",
  " - 20",
]
`;

exports[`<LevelRange> renders correctly with only mimimum specified 1`] = `
Array [
  "Level: ",
  "10",
  "",
]
`;
